# auth-sdk-m8

./: .codacy.yml  .dockerignore  .gitignore  CHANGELOG.md  README.md  SECURITY.md  constraints-all.txt  constraints.txt  pyproject.toml
.github/workflow/: PiPy.yml
.github/workflows/: CI.yaml  PiPy.yml  ci.yml
auth_sdk_m8/: __init__.py
auth_sdk_m8/controllers/: __init__.py  base.py  meta.py
auth_sdk_m8/core/: __init__.py  config.py  config_health.py  consumer.py  db_utils.py  exceptions.py  security.py
auth_sdk_m8/events/: __init__.py  _signing.py  stream_client.py
auth_sdk_m8/models/: __init__.py  shared.py
auth_sdk_m8/observability/: __init__.py  metrics.py  middleware.py  settings.py
auth_sdk_m8/redis_events/: __init__.py  _signing.py  event_bus.py  publisher.py  subscriber.py
auth_sdk_m8/schemas/: __init__.py  auth.py  base.py  meta.py  redis_events.py  shared.py  user.py  user_events.py
auth_sdk_m8/security/: __init__.py  blacklist.py  consumer_auth.py  factory.py  guards.py  headers.py  hooks.py  internal_auth.py  jwks_resolver.py  key_resolver.py  refresh_token_policy.py  refresh_token_store.py  session_store.py  token_policy.py  token_validator.py  validation.py
auth_sdk_m8/utils/: __init__.py  email.py  errors_parser.py  paths.py
tests/: conftest.py  test_asymmetric_tokens.py  test_config_health_allowed_hosts.py  test_config_health_event_signing.py  test_config_health_internal_http.py  test_consumer_mixin.py  test_controllers.py  test_core_config.py  test_core_db_utils.py  test_core_exceptions.py  test_core_security.py  test_event_stream_client.py  test_events_signing.py  test_internal_auth.py  test_jwt_contract.py  test_meta.py  test_models.py  test_observability.py  test_redis_events.py  test_redis_events_signing.py  test_schemas.py  test_schemas_auth.py  test_schemas_base.py  test_schemas_shared.py  test_schemas_user.py  test_secure_defaults.py  test_security_blacklist.py  test_security_consumer_auth.py  test_security_factory.py  test_security_guards.py  test_security_headers.py  test_security_hooks.py  test_security_jwks_resolver.py  test_security_refresh_token_policy.py  test_security_token_policy.py  test_security_token_validator.py  test_utils.py  test_utils_email.py  test_validator_baselines.py
