[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auth-sdk-m8"
version = "1.2.0"
description = "Shared authentication schemas, JWT utilities and FastAPI base components for m8 microservices."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eli Serra", email = "e.serra173@gmail.com" }]
requires-python = ">=3.11"
keywords = ["fastapi", "auth", "jwt", "microservices", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries",
]

# Minimal hard dependency: only pure-Pydantic models and email validation.
dependencies = [
    "pydantic>=2.13.4",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
# JWT encode/decode (core/security.py); cryptography required for RS256/ES256 and JWKS
security = [
    "PyJWT>=2.13.0",
    "cryptography>=48.0.0",
]
# FastAPI cookie helpers + BaseController (core/security.py cookie methods, controllers/base.py)
fastapi = [
    "fastapi>=0.136.3",
]
# Redis Pub/Sub event bus (redis_events/) — deprecated; will be removed in 2.0.0
redis = [
    "redis>=8.0.0",
]
# fa-auth SSE event-stream bridge client (events/)
events = [
    "httpx>=0.28.1",
]
# CommonSettings base class (core/config.py)
config = [
    "pydantic-settings>=2.14.1",
]
# SQLModel TimestampMixin and BaseController DB session (models/shared.py, controllers/base.py)
db = [
    "sqlmodel>=0.0.38",
    "sqlalchemy>=2.0.50",
]
# MySQL database driver (use with db extra)
mysql = [
    "pymysql>=1.2.0",
]
# PostgreSQL database driver (use with db extra)
postgres = [
    "psycopg2-binary>=2.9.12",
]
# Prometheus metrics middleware and registry (observability/)
observability = [
    "prometheus-client>=0.25.0",
    "fastapi>=0.136.3",
]
# Install every optional feature
all = [
    "PyJWT>=2.13.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "redis>=8.0.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "sqlalchemy>=2.0.50",
    "pymysql>=1.2.0",
    "psycopg2-binary>=2.9.12",
    "prometheus-client>=0.25.0",
]
# Development / test extras
dev = [
    "pytest>=9.0.3",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.28.1",
    "coverage>=7.14.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "bandit>=1.9.4",
    "pip-audit>=2.7.3",
    "mypy>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/mano8/auth-sdk-m8"
Repository = "https://github.com/mano8/auth-sdk-m8"
"Issue Tracker" = "https://github.com/mano8/auth-sdk-m8/issues"

[tool.hatch.build.targets.wheel]
packages = ["auth_sdk_m8"]

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "D"]
ignore = [
    "E501",
    # missing docstrings — too strict for library internals and magic methods
    "D100", "D104", "D105", "D107",
    # google-style conflicts — explicit so Codacy honours them even without convention support
    "D203", "D213", "D215", "D301",
    "D401", "D404", "D406", "D407", "D408", "D409",
    "D413", "D415", "D416", "D417",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["auth_sdk_m8"]

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=auth_sdk_m8 --cov-report=term-missing --cov-fail-under=100"
